@@ -1,0 +1,10 @@
+﻿using ProtoBuf;
+
+namespace Verticality.Moves.Crawl
+{
+    [ProtoContract(ImplicitFields=ImplicitFields.AllFields)]
+    public class IsCrawlingPacket
+    {
+        public bool isCrawling;
+    }
+}
