@@ -28,6 +28,15 @@
   },
   {
     "op": "add",
+    "path": "/server/behaviors/1",
+    "value": {
+      "code": "crawl"
+    },
+    "file": "game:entities/humanoid/player.json",
+    "side": "Server"
+  },
+  {
+    "op": "add",
     "path": "/client/animations/-",
     "value": {
       "code": "crawl",
